@@ -7,6 +7,7 @@ IN DEVELOPMENT ======= 1.2.7-1
 
 - updated: complete rewrited markdown parser (more than 50% better performance)
 - updated: complete rewrited markdown example
+- updated: framework.usage informations
 
 - fixed: builders.schema (default declaration)
 
